--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "stage": 0,
   "private": true,
   "dependencies": {
+    "acorn-dynamic-import": "^2.0.2",
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "enhanced-resolve": "^3.4.1",
     "isomorphic-fetch": "^2.2.1",
+    "json-loader": "^0.5.7",
+    "loader-runner": "^2.3.0",
+    "node-libs-browser": "^2.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
@@ -21,6 +26,8 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
+    "tapable": "^0.2.8",
+    "watchpack": "^1.4.0",
     "webpack": "^3.4.1"
   },
   "scripts": {
