--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "acorn-dynamic-import": "^2.0.2",
     "axios": "^0.16.2",
+    "babel": "^6.23.0",
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "enhanced-resolve": "^3.4.1",
