--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "enhanced-resolve": "^3.4.1",
+    "history": "^4.6.3",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.7",
     "loader-runner": "^2.3.0",
@@ -24,6 +25,7 @@
     "react-redux": "^5.0.5",
     "react-redux-router": "0.0.10",
     "react-router-dom": "^4.1.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "1.0.10",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
