--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "^6.23.0",
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "base-64": "^0.1.0",
     "enhanced-resolve": "^3.4.1",
     "history": "^4.6.3",
     "isomorphic-fetch": "^2.2.1",
@@ -28,6 +29,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "1.0.10",
     "redux": "^3.7.2",
+    "redux-form": "^7.0.3",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
