--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "enhanced-resolve": "^3.4.1",
     "history": "^4.6.3",
+    "immutability-helper": "^2.3.1",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.7",
     "loader-runner": "^2.3.0",
@@ -28,6 +29,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "1.0.10",
     "redux": "^3.7.2",
+    "redux-form": "^7.0.3",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
