--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json-loader": "^0.5.7",
     "loader-runner": "^2.3.0",
     "node-libs-browser": "^2.0.0",
+    "object-diff": "0.0.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
